invisible droppable appearence fix

--- a/src/components/LogicBlocks/InvidibleDroppable/InvidibleDroppable.module.less
+++ b/src/components/LogicBlocks/InvidibleDroppable/InvidibleDroppable.module.less
@@ -4,24 +4,24 @@
 .wrapper {
     box-sizing: border-box;
 
-    height: 3px;
-    width: 3px;
-
-    margin: 5px;
-
+    height: 4px;
+    width: 4px;
+    margin: 3px;
     border: none;
-    
+    border-radius: 5px;
     background-color: transparent;
     
     transition: 0.1s ease-out;
 }
 
-.hoverColumn {
+.columnWrapper {
     width: 100px;
-    background-color: @droppable-hover-color;
 }
 
-.hoverRow {
+.rowWrapper {
     height: 100%;
+}
+
+.hover {
     background-color: @droppable-hover-color;
 }
